// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Radio /> renders correctly 1`] = `
.c0 {
  display: inline-block;
  position: relative;
}

.c1 {
  opacity: 0;
  position: absolute;
  z-index: 0;
}

.c1:focus {
  box-shadow: none;
}

.c2 {
  display: inline-block;
  position: relative;
  vertical-align: middle;
  margin-bottom: 0.125rem;
  height: 1.25rem;
  width: 1.25rem;
  border-radius: 50%;
  z-index: 1;
}

input:checked + .c2:after {
  position: absolute;
  display: block;
  content: '';
  border-radius: 50%;
}

<Radio>
  <Radio__RadioWrapper>
    <StyledComponent
      forwardedRef={null}
    >
      <div
        className="c0"
      >
        <Radio__RadioInput
          type="radio"
        >
          <StyledComponent
            forwardedRef={null}
            type="radio"
          >
            <input
              className="c1"
              type="radio"
            />
          </StyledComponent>
        </Radio__RadioInput>
        <Radio__RadioIcon>
          <StyledComponent
            forwardedRef={null}
          >
            <div
              className="c2"
            />
          </StyledComponent>
        </Radio__RadioIcon>
      </div>
    </StyledComponent>
  </Radio__RadioWrapper>
</Radio>
`;

exports[`<Radio /> when checked renders correctly 1`] = `
.c0 {
  display: inline-block;
  position: relative;
}

.c1 {
  opacity: 0;
  position: absolute;
  z-index: 0;
}

.c1:focus {
  box-shadow: none;
}

.c2 {
  display: inline-block;
  position: relative;
  vertical-align: middle;
  margin-bottom: 0.125rem;
  height: 1.25rem;
  width: 1.25rem;
  border-radius: 50%;
  z-index: 1;
}

input:checked + .c2:after {
  position: absolute;
  display: block;
  content: '';
  border-radius: 50%;
}

<Radio
  defaultChecked={true}
>
  <Radio__RadioWrapper>
    <StyledComponent
      forwardedRef={null}
    >
      <div
        className="c0"
      >
        <Radio__RadioInput
          defaultChecked={true}
          type="radio"
        >
          <StyledComponent
            defaultChecked={true}
            forwardedRef={null}
            type="radio"
          >
            <input
              className="c1"
              defaultChecked={true}
              type="radio"
            />
          </StyledComponent>
        </Radio__RadioInput>
        <Radio__RadioIcon>
          <StyledComponent
            forwardedRef={null}
          >
            <div
              className="c2"
            />
          </StyledComponent>
        </Radio__RadioIcon>
      </div>
    </StyledComponent>
  </Radio__RadioWrapper>
</Radio>
`;

exports[`<Radio /> when disabled renders correctly 1`] = `
.c0 {
  display: inline-block;
  position: relative;
}

.c1 {
  opacity: 0;
  position: absolute;
  z-index: 0;
}

.c1:focus {
  box-shadow: none;
}

.c2 {
  display: inline-block;
  position: relative;
  vertical-align: middle;
  margin-bottom: 0.125rem;
  height: 1.25rem;
  width: 1.25rem;
  border-radius: 50%;
  z-index: 1;
}

input:checked + .c2:after {
  position: absolute;
  display: block;
  content: '';
  border-radius: 50%;
}

<Radio
  disabled={true}
>
  <Radio__RadioWrapper>
    <StyledComponent
      forwardedRef={null}
    >
      <div
        className="c0"
      >
        <Radio__RadioInput
          disabled={true}
          type="radio"
        >
          <StyledComponent
            disabled={true}
            forwardedRef={null}
            type="radio"
          >
            <input
              className="c1"
              disabled={true}
              type="radio"
            />
          </StyledComponent>
        </Radio__RadioInput>
        <Radio__RadioIcon>
          <StyledComponent
            forwardedRef={null}
          >
            <div
              className="c2"
            />
          </StyledComponent>
        </Radio__RadioIcon>
      </div>
    </StyledComponent>
  </Radio__RadioWrapper>
</Radio>
`;
